--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "selenium-test-un-heroku",
   "version": "1.0.0",
-  "description": "b",
+  "description": "start",
   "main": "index.js",
   
   "author": "Manjunath",
