--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
    "environments" : {
       "test" : {
          "buildpacks" : [
+	    { "url": "heroku/jvm"},
             {
                "url" : "heroku/nodejs"
             },
