--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
    "environments" : {
       "test" : {
          "buildpacks" : [
-	    { "url" : "heroku/jvm"},
+	    { "url" : "heroku/java"},
             {
                "url" : "heroku/nodejs"
             },
