--- a/app.json
+++ b/app.json
@@ -14,6 +14,9 @@
                "url" : "heroku/nodejs"
             },
             {
+               "url" : "https://github.com/heroku/heroku-buildpack-chromedriver"
+            },
+            {
                "url" : "https://github.com/heroku/heroku-buildpack-google-chrome"
             }
          ],
