--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "./node_modules/.bin/nightwatch --env local"
   },
-  "author": "Vikash",
+  "author": "Ankit",
   "license": "",
   "dependencies": {
     "express": "^4.15.3",
